--- a/tienda.html
+++ b/tienda.html
@@ -32,62 +32,62 @@
 
     <div class="galeria">
         <div class="foto-container">
-            <img src="Placa base .webp" alt="Placa base" class="foto">
+            <img src="Placa base.png" alt="Placa base" class="foto">
             <h3>Placa base</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Procesadores.webp" alt="Procesador" class="foto">
+            <img src="Procesadores.png" alt="Procesador" class="foto">
             <h3>Procesadores</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Discos_duros.webp" alt="Discos duros" class="foto">
+            <img src="Discos_duros.png" alt="Discos duros" class="foto">
             <h3>Discos duros</h3>
         </div>
 
         <div class="foto-container">
-            <img src="SSD.webp" alt="SSD" class="foto">
+            <img src="SSD.png" alt="SSD" class="foto">
             <h3>SSD</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Tarjetas_graficas.webp" alt="Tarjetas graficas" class="foto">
+            <img src="Tarjetas_graficas.png" alt="Tarjetas graficas" class="foto">
             <h3>Tarjetas graficas</h3>
         </div>
 
         <div class="foto-container">
-            <img src="RAM.webp" alt="RAM" class="foto">
+            <img src="RAM.png" alt="RAM" class="foto">
             <h3>RAM</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Refrigeracion_liquida.webp" alt="Refrigeracion liquida" class="foto">
+            <img src="Refrigeracion_liquida.png" alt="Refrigeracion liquida" class="foto">
             <h3>Refrigeracion liquida</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Tarjetas_de_sonido.webp" alt="Tarjetas de sonido" class="foto">
+            <img src="Tarjetas_de_sonido.png" alt="Tarjetas de sonido" class="foto">
             <h3>Tarjetas de sonido</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Torres.webp" alt="Torres" class="foto">
+            <img src="Torres.png" alt="Torres" class="foto">
             <h3>Torres</h3>
         </div>
 
         <div class="foto-container">
-            <img src="Ventiladores.webp" alt="Ventiladores" class="foto">
+            <img src="Ventiladores.png" alt="Ventiladores" class="foto">
             <h3>Ventiladores</h3>
         </div>
 
         <div class="foto-container">
-            <img src="PSU.webp" alt="PSU" class="foto">
+            <img src="PSU.png" alt="PSU" class="foto">
             <h3>PSU</h3>
         </div>
  
         <div class="foto-container">
-            <img src="Ventiladores_CPU.webp" alt="Ventiladores CPU" class="foto">
+            <img src="Ventiladores_CPU.png" alt="Ventiladores CPU" class="foto">
             <h3>Ventiladores CPU</h3>
         </div>
 
