--- a/html/Pagina_principal.html
+++ b/html/Pagina_principal.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<htm lang="es">
+<html lang="es">
 <!--Titulo y referencia al css-->
-<head> 
-  <title>DomusTech</title>
-  <link rel="stylesheet" href="pagina_principal.css" />
+<head>
+    <title>Pagina principal - DomusTech</title>
+    <link rel="stylesheet" href="..\css\styles.css">
 </head>
 
 <body>
 <!-- Header -->
-  <header id="navbar">
-    <div id="logo">
-      <img src="logo DOMUSTECH.png" alt="Logo de la tienda" />
-      <a href="Pagina_principal.html">DomusTech</a>
-    </div>
+    <header id="navbar">
+        <div id="logo">
+            <img src="..\imagenes\logo DOMUSTECH.png" alt="Logo de la tienda" />
+            <a href="Pagina_principal.html">DomusTech</a>
+        </div>
 
 <!--Barra de navegacion con links a las otras paginas html-->
-    <nav id="menu">
-      <div class="menu-items">
-        <div><a href="pedir-cita.html">Pedir cita</a></div>
-        <div><a href="tienda.html">Tienda</a></div>
-        <div><a href="sobre-nosotros.html">Sobre nosotros</a></div>
-      </div>
-    </nav>
+        <nav id="menu">
+            <div class="menu-items">
+                <div><a href="pedir-cita.html">Pedir cita</a></div>
+                <div><a href="tienda.html">Tienda</a></div>
+                <div><a href="sobre-nosotros.html">Sobre nosotros</a></div>
+                <div><a href="valoraciones.html">Valoraciones</a></div>
+            </div>
+        </nav>
   </header>
 
 <!-- Main en secciones-->
@@ -54,9 +55,9 @@
         <h2>Galeria de trabajos</h2>
         <p>Algunos de nuestros proyectos recientes:</p>
           <div class="galeria">
-            <img src="Ordenador1.jpeg" alt="Imagen1">
-            <img src="Ordenador2.jpg" alt="Imagen2">
-            <img src="Ordenador3.jpeg" alt="Imagen3">
+            <img src="..\imagenes\Ordenador1.jpeg" alt="Imagen1">
+            <img src="..\imagenes\Ordenador2.jpg" alt="Imagen2">
+            <img src="..\imagenes\Ordenador3.jpeg" alt="Imagen3">
           </div>
       </section>
     </main>
