--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -3,7 +3,7 @@
 <!--Titulo y referencia al css-->
 <head>
     <title>Sobre nosotros - DomusTech</title>
-    <link rel="stylesheet" href="sobre-nosotros.css">
+    <link rel="stylesheet" href="..\css\styles.css">
 </head>
 
 <!--Abre el contenido principal-->
@@ -11,7 +11,7 @@
 <!--Barra de navegación en el header-->
     <header id="navbar">
         <div id="logo">
-            <img src="logo DOMUSTECH.png" alt="Logo de la tienda" />
+            <img src="..\imagenes\logo DOMUSTECH.png" alt="Logo de la tienda" />
             <a href="Pagina_principal.html">DomusTech</a>
         </div>
 
@@ -20,12 +20,13 @@
                 <div><a href="pedir-cita.html">Pedir cita</a></div>
                 <div><a href="tienda.html">Tienda</a></div>
                 <div><a href="sobre-nosotros.html">Sobre nosotros</a></div>
+                <div><a href="valoraciones.html">Valoraciones</a></div>
             </div>
         </nav>
   </header>
-
+<div class="texto">
 <!--Seccion de introducion simple, solo con un h y un parrafo-->    
-    <div class="container">
+    <div class="contenedor">
         <section class="intro">
             <h2>Sobre nosotros</h2>
             <p>En DomusTech llevamos mas de 15 años ofreciendo soluciones integrales de montaje y mantenimiento informatico tanto en nuestra tienda como a domicilio. Nuestra pasion por la tecnologaa y el compromiso con nuestros clientes nos han convertido en referentes del sector.</p>
@@ -41,7 +42,7 @@
                     <p>Hoy contamos con un equipo de 12 profesionales altamente cualificados y hemos atendido a mas de 5,000 clientes satisfechos en toda la comunidad de Bilbao.</p>
                 </div>
                 <div class="historia-imagen">
-                    <img src="Tienda.webp" alt="Foto de tienda">
+                    <img src="..\imagenes\Tienda.webp" alt="Foto de tienda">
                         <p>Nuestra primera tienda (2008)</p>
                     </div>
                 </div>
@@ -71,12 +72,10 @@
             <div class="servicios-lista">
                 <div class="servicios-items">
                     <h3>¿Que incluye?</h3>
-                    <ul>
                         <li>Montaje e instalacion de equipos informaticos</li>
                         <li>Mantenimiento preventivo y limpieza de equipos</li>
                         <li>Resolucion de problemas tecnicos</li>
                         <li>Asesoramiento personalizado sobre tu set up</li>
-                    </ul>
                 </div>
             </div>
         </section>
@@ -85,14 +84,12 @@
         <section class="compromiso">
             <h2>Compromiso con la comunidad</h2>
             <p>En DomusTech creemos en devolver a la comunidad parte de lo que nos ha dado. Por eso:</p>
-            <ul>
                 <li>Ofrecemos talleres gratuitos de iniciacion a la informatica para mayores</li>
                 <li>Colaboramos con centros educativos en programas de tecnologia</li>
                 <li>Reciclamos responsablemente todos los componentes electronicos</li>
                 <li>Donamos equipos reacondicionados a organizaciones bene  ficas</li>
-            </ul>
         </section>
-
+</div>
 <!--Footer-->    
     <footer>
         <div class="container">
