--- a/html/tienda.html
+++ b/html/tienda.html
@@ -3,7 +3,7 @@
 <!--Titulo y referencia al css-->
 <head>
     <title>Tienda - DomusTech</title>
-    <link rel="stylesheet" href="tienda.css">
+    <link rel="stylesheet" href="..\css\styles.css">
 </head>
 
 <!--Abre el contenido principal-->
@@ -11,7 +11,7 @@
 <!--Barra de navegación en el header-->
     <header id="navbar">
         <div id="logo">
-            <img src="logo DOMUSTECH.png" alt="Logo de la tienda" />
+            <img src="..\imagenes\logo DOMUSTECH.png" alt="Logo de la tienda" />
             <a href="Pagina_principal.html">DomusTech</a>
         </div>
 
@@ -20,6 +20,7 @@
                 <div><a href="pedir-cita.html">Pedir cita</a></div>
                 <div><a href="tienda.html">Tienda</a></div>
                 <div><a href="sobre-nosotros.html">Sobre nosotros</a></div>
+                <div><a href="valoraciones.html">Valoraciones</a></div>
             </div>
         </nav>
   </header>
@@ -30,74 +31,75 @@
         <button id="search-button">🔍</button>
     </div>
 
-    <div class="galeria">
+<!--Seccion de fotos con texto debajo de estas-->
+    <div class="componentes">
         <div class="foto-container">
-            <img src="Placa base.png" alt="Placa base" class="foto">
-            <h3>Placa base</h3>
+            <img src="..\imagenes\Placa base.png" alt="Placa base" class="foto">
+            <h4>Placa base</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Procesadores.png" alt="Procesador" class="foto">
-            <h3>Procesadores</h3>
+            <img src="..\imagenes\Procesadores.png" alt="Procesador" class="foto">
+            <h4>Procesadores</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Discos_duros.png" alt="Discos duros" class="foto">
-            <h3>Discos duros</h3>
+            <img src="..\imagenes\Discos_duros.png" alt="Discos duros" class="foto">
+            <h4>Discos duros</h4>
         </div>
 
         <div class="foto-container">
-            <img src="SSD.png" alt="SSD" class="foto">
-            <h3>SSD</h3>
+            <img src="..\imagenes\SSD.png" alt="SSD" class="foto">
+            <h4>SSD</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Tarjetas_graficas.png" alt="Tarjetas graficas" class="foto">
-            <h3>Tarjetas graficas</h3>
+            <img src="..\imagenes\Tarjetas_graficas.png" alt="Tarjetas graficas" class="foto">
+            <h4>Tarjetas graficas</h4>
         </div>
 
         <div class="foto-container">
-            <img src="RAM.png" alt="RAM" class="foto">
-            <h3>RAM</h3>
+            <img src="..\imagenes\RAM.png" alt="RAM" class="foto">
+            <h4>RAM</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Refrigeracion_liquida.png" alt="Refrigeracion liquida" class="foto">
-            <h3>Refrigeracion liquida</h3>
+            <img src="..\imagenes\Refrigeracion_liquida.png" alt="Refrigeracion liquida" class="foto">
+            <h4>Refrigeracion liquida</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Tarjetas_de_sonido.png" alt="Tarjetas de sonido" class="foto">
-            <h3>Tarjetas de sonido</h3>
+            <img src="..\imagenes\Tarjetas_de_sonido.png" alt="Tarjetas de sonido" class="foto">
+            <h4>Tarjetas de sonido</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Torres.png" alt="Torres" class="foto">
-            <h3>Torres</h3>
+            <img src="..\imagenes\Torres.png" alt="Torres" class="foto">
+            <h4>Torres</h4>
         </div>
 
         <div class="foto-container">
-            <img src="Ventiladores.png" alt="Ventiladores" class="foto">
-            <h3>Ventiladores</h3>
+            <img src="..\imagenes\Ventiladores.png" alt="Ventiladores" class="foto">
+            <h4>Ventiladores</h4>
         </div>
 
         <div class="foto-container">
-            <img src="PSU.png" alt="PSU" class="foto">
-            <h3>PSU</h3>
+            <img src="..\imagenes\PSU.png" alt="PSU" class="foto">
+            <h4>PSU</h4>
         </div>
  
         <div class="foto-container">
-            <img src="Ventiladores_CPU.png" alt="Ventiladores CPU" class="foto">
-            <h3>Ventiladores CPU</h3>
+            <img src="..\imagenes\Ventiladores_CPU.png" alt="Ventiladores CPU" class="foto">
+            <h4>Ventiladores CPU</h4>
         </div>
 
     </div>
 
 <!--Footer-->
     <footer>
-        <div class="container">
+        <div class="footer">
             <p>2025 DomusTech - Montajes y mantenimientos informaticos</p>
         </div>
     </footer>
-    </body>
+</body>
 </html>
