--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -42,7 +42,7 @@
                     <p>Hoy contamos con un equipo de 12 profesionales altamente cualificados y hemos atendido a mas de 5,000 clientes satisfechos en toda la comunidad de Bilbao.</p>
                 </div>
                 <div class="historia-imagen">
-                    <img src="..\imagenes\Tienda.webp" alt="Foto de tienda">
+                    <img src="..\imagenes\Tienda.png" alt="Foto de tienda">
                         <p>Nuestra primera tienda (2008)</p>
                     </div>
                 </div>
